-- AlterTable
ALTER TABLE "team_manager_assignments" ALTER COLUMN "id" DROP DEFAULT;
