-- AlterTable
ALTER TABLE "promotion_candidates" ALTER COLUMN "id" DROP DEFAULT;
